--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "serve": "webpack-dev-server"
+    "serve": "phonegap serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.1",
-    "onsenui": "^2.0.0-rc.17"
+    "onsenui": "2.0.0-rc.19"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
@@ -23,6 +23,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "ng-annotate-loader": "^0.2.0",
+    "phonegap": "^6.4.2",
     "postcss-loader": "^1.2.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
