--- a/package.json
+++ b/package.json
@@ -4,27 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "serve": "phonegap serve"
+    "build": "webpack --progress --color -p.",
+    "webpack": "webpack --progress --color --watch",
+    "serve": "phonegap serve",
+    "start": "concurrently \"npm run webpack\" \"npm run serve\""
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "angular": "^1.6.1",
     "onsenui": "2.0.0-rc.17"
   },
   "devDependencies": {
+    "autoprefixer": "^6.6.1",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
+    "concurrently": "^3.1.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "ng-annotate-loader": "^0.2.0",
+    "node-sass": "^4.1.1",
     "phonegap": "^6.4.2",
     "postcss-loader": "^1.2.2",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
