--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.6.1",
-    "onsenui": "2.0.4"
+    "onsenui": "^2.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
