--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
     "extends": "eslint:recommended",
     "env": {
         "browser": true,
-        "amd": true,
+        "node": true,
         "es6": true
     },
     "globals": {
