--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "^0.9.0",
     "ng-annotate-loader": "^0.2.0",
     "node-sass": "^4.1.1",
+    "path": "^0.12.7",
     "phonegap": "^6.4.2",
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
