--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.8
-    - openjdk-7-jdk
+    - oracle-java8-installer
     - lib32stdc++6
     - lib32z1
 env:
@@ -34,8 +34,8 @@ before_script:
   - export PATH=${PATH}:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/23.0.2
 
 script:
- # - phonegap platform remove android
- # - phonegap platform add android
- # - phonegap prepare android
- # - phonegap build android
- # - ls phonegap info
+  - phonegap platform remove android
+  - phonegap platform add android
+  - phonegap prepare android
+  - phonegap build android
+  - ls phonegap info
