--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-onsenui2-es2015",
+  "name": "angular-onsenui2-webpack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
