--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "angular-onsenui2-webpack",
+  "name": "angular-onsenui2-webpack2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --progress --color -p.",
+    "build": "webpack --progress --color -p",
     "webpack": "webpack --progress --color --watch",
     "serve": "phonegap serve",
     "start": "concurrently \"npm run webpack\" \"npm run serve\""
@@ -17,24 +17,24 @@
     "onsenui": "^2.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
-    "babel-core": "^6.21.0",
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
-    "concurrently": "^3.1.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "concurrently": "^3.2.0",
     "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
     "ng-annotate-loader": "^0.2.0",
-    "node-sass": "^4.1.1",
+    "node-sass": "^4.5.0",
     "path": "^0.12.7",
-    "phonegap": "^6.4.2",
+    "phonegap": "^6.4.3",
     "postcss-loader": "^1.2.2",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   }
 }
