--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets": [["es2015", { "modules": false }]]
+  "presets": [
+    [
+      "es2015",
+      {
+        "modules": false
+      }
+    ],
+    "es2016"
+  ],
+  "plugins": [
+    "angularjs-annotate"
+  ]
 }
