--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --progress --color -p",
+    "build": "webpack --progress --colors --env.prod=true",
     "webpack": "webpack --progress --color --watch",
     "serve": "phonegap serve",
     "start": "concurrently \"npm run webpack\" \"npm run serve\""
@@ -13,28 +13,28 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.6.1",
+    "angular": "^1.6.2",
     "onsenui": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.23.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-angularjs-annotate": "^0.7.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "concurrently": "^3.2.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "concurrently": "^3.3.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
-    "ng-annotate-loader": "^0.2.0",
     "node-sass": "^4.5.0",
     "path": "^0.12.7",
     "phonegap": "^6.4.3",
-    "postcss-loader": "^1.2.2",
-    "sass-loader": "^5.0.1",
+    "postcss-loader": "^1.3.0",
+    "sass-loader": "^6.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack": "^2.2.1"
   }
 }
