--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --progress --colors --env.prod=true",
     "webpack": "webpack --progress --color --watch",
     "serve": "phonegap serve",
-    "start": "concurrently \"npm run webpack\" \"npm run serve\""
+    "start": "npm run webpack & npm run serve"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +18,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
-    "babel-core": "^6.23.0",
-    "babel-loader": "^6.2.10",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.1",
     "babel-plugin-angularjs-annotate": "^0.7.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-register": "^6.23.0",
-    "concurrently": "^3.3.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
