--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "onsenui": "^2.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.1",
     "babel-plugin-angularjs-annotate": "^0.7.0",
@@ -27,11 +26,14 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
-    "node-sass": "^4.5.0",
     "path": "^0.12.7",
     "phonegap": "^6.4.3",
+    "postcss": "^5.2.13",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.0",
-    "sass-loader": "^6.0.0",
+    "postcss-simple-vars": "^3.0.0",
+    "postcss-url": "^5.1.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1"
