--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.0",
+    "postcss-mixins": "^5.4.1",
+    "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "postcss-url": "^5.1.2",
     "style-loader": "^0.13.1",
