--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "angular-onsenui2-webpack2",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "AngularJS + Onsen UI 2 + Webpack2 + PhoneGap + ES2016 + SCSS/cssnext",
+  "main": "src/js/app.js",
   "scripts": {
-    "build": "webpack --progress --colors --env.prod=true",
-    "webpack": "webpack --progress --color --watch",
+    "build": "webpack --progress --colors",
+    "build:prod": "webpack --progress --colors --env.prod=true",
+    "build:watch": "webpack --progress --colors --watch",
+    "phonegap": "phonegap",
     "serve": "phonegap serve",
-    "start": "npm run webpack & npm run serve"
+    "prepare": "phonegap prepare",
+    "preprepare": "npm run build:prod",
+    "start": "npm run build:watch & npm run serve"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["AngularJS", "cssnext", "ES2016", "Onsen UI", "PhoneGap", "PostCSS", "SCSS", "Webpack", "Yarn"],
+  "author": "puku0x",
   "license": "MIT",
   "dependencies": {
     "angular": "^1.6.2",
@@ -22,13 +26,12 @@
     "babel-plugin-angularjs-annotate": "^0.7.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
-    "babel-register": "^6.23.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "path": "^0.12.7",
     "phonegap": "^6.4.3",
-    "postcss": "^5.2.13",
+    "postcss": "^5.2.14",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.0",
