--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,19 @@ language: node_js
 node_js:
   - "6"
 
+cache:
+  directories:
+    - node_modules
+    - $HOME/.yarn-cache
+
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
+
 install:
-  - npm install -g yarn
-  - yarn
-  - yarn build
+  - yarn install
 
 before_script:
 
 script:
+  - yarn build
