--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,21 @@
 sudo: false
 
 language: node_js
-node_js:
-  - "6"
 
-cache:
-  directories:
-    - node_modules
-    - $HOME/.yarn-cache
+node_js:
+  - "4"
+  - "5"
+  - "6"
+  - "7"
+  - node
+
+dist: trusty
+
+cache: yarn
 
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - export PATH="$HOME/.yarn/bin:$PATH"
 
 install:
-  - yarn install
 
 before_script:
 
