--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "preprepare": "npm run build",
     "start": "npm run build:watch & npm run serve"
   },
-  "keywords": ["AngularJS", "cssnext", "ES2016", "Onsen UI", "PhoneGap", "PostCSS", "SCSS", "Webpack", "Yarn"],
+  "keywords": [
+    "AngularJS",
+    "cssnext",
+    "ES2017",
+    "Onsen UI",
+    "PhoneGap",
+    "PostCSS",
+    "SCSS",
+    "Webpack",
+    "Yarn"
+  ],
   "author": "puku0x",
   "license": "MIT",
   "dependencies": {
@@ -26,6 +36,7 @@
     "babel-plugin-angularjs-annotate": "^0.7.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
+    "babel-preset-es2017": "^6.22.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
