--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.28.0",
     "path": "^0.12.7",
     "phonegap": "^6.4.3",
     "postcss": "^5.2.14",
