--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "file-loader": "^0.10.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
+    "ngtemplate-loader": "^1.3.1",
     "path": "^0.12.7",
     "phonegap": "^6.4.3",
     "postcss": "^5.2.14",
