--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "phonegap serve",
     "prepare": "phonegap prepare",
     "preprepare": "npm run build",
-    "start": "npm run build:watch & npm run serve"
+    "start": "concurrently \"npm run build:watch\" \"npm run serve\""
   },
   "keywords": [
     "AngularJS",
@@ -37,8 +37,9 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-es2017": "^6.22.0",
+    "concurrently": "^3.3.0",
     "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
